# mini-evermemos

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  demo.py  docker-compose.yml  main.py  pyproject.toml  scale_eval_results_1769750745.json  scale_evaluation.py
src/: __init__.py
src/core/: __init__.py  consolidator.py  extractor.py  memory_system.py  retriever.py
src/models/: __init__.py  conflict.py  memcell.py  memscene.py
src/prompts/: __init__.py  boundary_detection.py  conflict_detection.py  episode_extraction.py  foresight_extraction.py
src/storage/: __init__.py  memory_store.py  milvus_client.py  mongo_client.py  search_index.py
src/utils/: __init__.py  datetime_utils.py  embeddings.py  llm.py
tests/: mock_db.py  test_conflict.py  test_consolidator.py  test_evermemos_specifics.py  test_extractor.py  test_foresight.py  test_retrieval.py
tests/scenarios/: dietary_change.json  health_condition.json  job_location_change.json  temporal_queries.json
